--- a/assets/settings.json
+++ b/assets/settings.json
@@ -1,7 +1,7 @@
 {
     "youAreA":[
-        "一个有用助手",
-        "诗人",
+        "有用的助手",
+        "沉醉的诗人",
         "冷笑话专家",
         "笑点工程师",
         "段子生成器"
