feat: 增加了一个有意思的东西

--- a/assets/settings.json
+++ b/assets/settings.json
@@ -4,7 +4,8 @@
         "沉醉的诗人",
         "冷笑话专家",
         "笑点工程师",
-        "段子生成器"
+        "段子生成器",
+        "互联网嘴替"
     ],
     "roles":[
         "朋友",
